Fix scrollbars on non macOS devices

--- a/packages/commonwealth/client/styles/index.scss
+++ b/packages/commonwealth/client/styles/index.scss
@@ -5,6 +5,22 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
 html,
 body {
   box-sizing: border-box;
